objects/CSS_Solutions__c.object
<CustomObject>
    <fields>
        <fullName>Admin_SRTS__c</fullName>
        <label>Admin_SRTS</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Classic_SJId__c</fullName>
        <formula>IF(Service_Job__c != &apos;&apos;, Service_Job__c, 
IF(FaultCode__r.Job_Order__c != &apos;&apos;, FaultCode__r.Job_Order__c, Symptom__r.Job_Order__c ))</formula>
        <label>Classic Service Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Nested_Solutions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Nested Solutions</label>
        <referenceTo>CSS_Solutions__c</referenceTo>
        <relationshipName>CSS_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <description>This field is the case Id from EDS.</description>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSID__c</fullName>
        <formula>Service_Job__r.DSID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiagTargetTime__c</fullName>
        <description>To store Diagnostic Target Time as per story GSSC-155</description>
        <label>DiagTargetTime</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnose_SRT__c</fullName>
        <description>This field is used to store the solution for related syptom</description>
        <label>Diagnose SRT</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Icon__c</fullName>
        <formula>&quot;&lt;i class=&apos;fa fa-refresh&apos;&gt;&lt;/i&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diagnosis Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Notes__c</fullName>
        <label>Diagnostic Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Response__c</fullName>
        <description>Values for Verification</description>
        <label>Diagnostic Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not the solution</fullName>
                </value>
                <value>
                    <fullName>Most likely the solution</fullName>
                </value>
                <value>
                    <fullName>Could not perform the solution verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EVL_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVL Service Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WorkOrder.RecordTypeId</field>
                <operation>equals</operation>
                <value>EVL Close</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Solutions History</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Fault_Code_Formula__c</fullName>
        <formula>FaultCode__r.Name</formula>
        <label>Fault Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_LanguageKey__c</fullName>
        <label>FSL LanguageKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_PositionOfSolution__c</fullName>
        <formula>VALUE(FSL_Solution_Position__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL_PositionOfSolution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL Service Job</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Solutions History</relationshipLabel>
        <relationshipName>CSS_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Solution_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Content</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipName>CSS_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Solution_Count__c</fullName>
        <label>FSL_Solution_Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Solution_Position__c</fullName>
        <label>Solution Position</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Solution_Priority__c</fullName>
        <label>FSL Solution Priority</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FaultCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Fault Code</label>
        <referenceTo>CSS_Fault_Code__c</referenceTo>
        <relationshipName>CSS_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fault_Codes__c</fullName>
        <label>Fault Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobClosure_Response__c</fullName>
        <label>JobClosure Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful, problem solved</fullName>
                </value>
                <value>
                    <fullName>Successful with additional parts or steps</fullName>
                </value>
                <value>
                    <fullName>Resolution performed and failed</fullName>
                </value>
                <value>
                    <fullName>Resolution not performed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedSol_Count__c</fullName>
        <label>LinkedSol Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkedSol_Value__c</fullName>
        <label>LinkedSol Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nested_Rank__c</fullName>
        <label>Nested Rank</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Access_SRT_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Access SRT required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_Of_Order_Popup_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Order Popup displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_Of_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Notes__c</fullName>
        <label>Repair Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repair_Response__c</fullName>
        <label>Repair Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repair Successful.</fullName>
                </value>
                <value>
                    <fullName>Repair Successful with additional parts/procedures.</fullName>
                </value>
                <value>
                    <fullName>Repair performed but didnot resolve the root cause.</fullName>
                </value>
                <value>
                    <fullName>Repair not performed.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Status__c</fullName>
        <description>Stores the Value of CSS Solutions Name, which is a repair status coming from EDS.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repair Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repairs_Made__c</fullName>
        <label>Repairs Made</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Comments__c</fullName>
        <description>To store report problem comments.</description>
        <label>Report Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <formula>Symptom__r.Caption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup for Service Job object that stores the  Job order number associated with it.</description>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipName>CSS_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <formula>Service_Job__r.Service_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Title__c</fullName>
        <description>It’s a solution Id obtained from EDS.</description>
        <label>Solution Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solution1</fullName>
                </value>
                <value>
                    <fullName>Solution2</fullName>
                </value>
                <value>
                    <fullName>Solution3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS_SymptomQA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CSS_SymptomQA__c.Type__c</field>
                <operation>equals</operation>
                <value>SearchString</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CSS_SymptomQA__c</referenceTo>
        <relationshipName>CSS_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetMessage__c</fullName>
        <description>To store Target Message as per story GSSC-155</description>
        <label>TargetMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Solution__c</fullName>
        <externalId>true</externalId>
        <label>Unique Solution</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userTimestamp__c</fullName>
        <label>userTimestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Solution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Service_Job__c</columns>
        <columns>Case_Name__c</columns>
        <columns>NAME</columns>
        <columns>Solution_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ViewAll</fullName>
        <columns>Service_Job__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Fault_Codes__c</columns>
        <columns>NAME</columns>
        <columns>Diagnostic_Response__c</columns>
        <columns>Solution_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Repair_Response__c</columns>
        <columns>CSS_Nested_Solutions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSL_Service_Job__c</field>
            <operation>equals</operation>
            <value>00382149</value>
        </filters>
        <label>ViewAll</label>
    </listViews>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CSS_Solutions_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)  &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>CSS Solution Name can&apos;t be Edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Service_Order_Closed_SolutionHistory</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL(FSL_Service_Job__r.Status, &quot;Closed&quot;), 
							ISPICKVAL(FSL_Service_Job__r.Status, &quot;Canceled&quot;) )</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_User_Create_Check</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(CSS_Classic_SJId__c) &amp;&amp; ISBLANK(FSL_Service_Job__c)</errorConditionFormula>
        <errorMessage>Solution record cannot be created without any associated Job</errorMessage>
    </validationRules>
</CustomObject>